# readCon

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  conda-lock.yml  environment.yml  meson.build  meson_options.txt  pixi.toml  readme.org  towncrier.toml
.github/workflows/: build_test.yml  pre_commit.yml
CppCore/: BaseTypes.cc  ConArrow.cc  Helpers.cc  ReadCon.cc  meson.build  tiny_cli.cpp
CppCore/gtests/: TestConFrame.cc  TestConFrameHelpers.cc  TestConFrameVec.cc
CppCore/helpers/: FileHelpers.cc  StringHelpers.cc
CppCore/include/: BaseTypes.hpp  ConArrow.hpp  FormatConstants.hpp  Helpers.hpp  ReadCon.hpp  StringHelpers.hpp
CppCore/include/helpers/: StringHelpers.hpp
CppCore/readCon/include/: BaseTypes.hpp  ConArrow.hpp  FormatConstants.hpp  Helpers.hpp  ReadCon.hpp
CppCore/readCon/include/adapters/: eigen.hpp  xtensor.hpp
CppCore/readCon/include/helpers/: StringHelpers.hpp
CppCore/tests/: TestConFrame.cc  TestConFrameHelpers.cc  TestConFrameVec.cc  TestEigenAdapter.cc  TestXTensorAdapter.cc  meson.build
docs/newsfragments/: +21.added.md  +apache.added.md  +towncrier.added.md  1.changed.md  18.changed.md  22.changed.md  33.added.md
test_data/: cuh2.con  tiny_cuh2.con  tiny_multi_cuh2.con
