# Booleans
option('with_tests', type : 'boolean', value : false)
option('with_examples', type : 'boolean', value : false)
option('with_fmt', type : 'boolean', value : false)
option('with_xtensor', type : 'boolean', value : false)
option('with_apache_arrow', type : 'boolean', value : false)
option('with_rangev3', type : 'boolean', value : false)
